prevent gamelist from overflowing

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -61,7 +61,7 @@ html, body {
 	flex-flow: wrap;
 	align-items: center;
 	justify-content: left;
-	height: 100%;
+	height: 80%;
 	align-content: flex-start;
 }
 
